--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Welcome to Vue</title>
   <script src="https://unpkg.com/d3"></script>
   <script src="https://unpkg.com/vue/dist/vue.js"></script>
-<style>
 
+<style>
 
 .chart rect {
   fill: steelblue;
@@ -18,14 +18,23 @@
   text-anchor: end;
 }
 
+.pie_chart div {
+				font-family: sans-serif;
+				font-size: 12px;
+				fill: white;
+			}
+
 </style>
 </head>
 <body>
   <svg id="app" class="chart"></svg>
-  <p>You can update the bar chart with running something like below in the browser developer tool.</p>
-  <pre>
-    vm.$data.data = [1, 3, 2]
-  </pre>
+  <p style="margin-left : 30px;">막대</p>
+
+  <div class="graph"></div>
+  <p style="margin-left : 100px;">원형 차트</p>
+
+  <div id="my_dataviz"></div>
+  <p style="margin-left : 100px;">도넛 차트</p>
 
   <script>
     var vm = new Vue({
@@ -46,7 +55,8 @@
 
           var chart = d3.select(this.$el)
               .attr("width", width)
-              .attr("height", barHeight * data.length);
+              .attr("height", barHeight * data.length)
+              ;
 
           var d = chart.selectAll("g")
               .data(data);
@@ -77,6 +87,85 @@
         }
       }
     });
+
+    // PIE CHART
+    var w = 250,
+        h = 250;
+
+    d3.select(".graph")
+        .append("svg")
+        .attr("width", w)
+        .attr("height", h)
+        .attr("id", "graphWrap");
+    var graphWrap = d3.select("#graphWrap");
+
+    var graphData = [4, 8, 15, 16, 23, 42];
+    var pie = d3.pie();
+    var arc = d3.arc().innerRadius(0).outerRadius(100);
+    var colors = d3.scaleOrdinal(d3.schemeCategory10);
+
+    var oneGraph = graphWrap.selectAll("path").data(pie(graphData));
+    oneGraph.enter()
+        .append("path")
+        .attr("class", "pie")
+        .attr("transform", "translate("+(w/2)+","+(h/2)+")")
+        .style("fill", function(d, i) {
+            return colors(graphData[i]);})
+        .transition()
+        .duration(1000)
+        .delay(function(d, i) {
+            return i * 300;
+        })
+        .attrTween("d", function(d, i) {
+            var interpolate = d3.interpolate(
+                {startAngle : d.startAngle, endAngle : d.startAngle},
+                {startAngle : d.startAngle, endAngle : d.endAngle}
+            );
+            return function(t){
+                return arc(interpolate(t));
+            }
+        });
+
+
+    //
+
+    var width = 250,
+        height = 250,
+        margin = 40;
+
+    var radius = Math.min(width, height) / 2 - margin
+    var svg = d3.select("#my_dataviz")
+      .append("svg")
+        .attr("width", width)
+        .attr("height", height)
+      .append("g")
+        .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
+
+    var data = {a: 4, b: 8, c:15, d:16, e:23}
+
+    var color = d3.scaleOrdinal()
+      .domain(data)
+      .range(["#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56"])
+
+    var pie = d3.pie()
+      .value(function(d) {return d.value; })
+    var data_ready = pie(d3.entries(data))
+
+    svg
+      .selectAll('whatever')
+      .data(data_ready)
+      .enter()
+      .append('path')
+      .attr('d', d3.arc()
+        .innerRadius(100)
+        .outerRadius(radius)
+      )
+      .attr('fill', function(d){ return(color(d.data.key)) })
+      .attr("stroke", "black")
+      .style("stroke-width", "2px")
+      .style("opacity", 0.7)
   </script>
+  <script src="https://d3js.org/d3.v3.min.js"  charset="utf-8"></script>
+
 </body>
 </html>
